<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.DoctorDetails">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:weightSum="1"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/doctor_img"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/testing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/doctor_name_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="start"
                        android:layout_marginEnd="35dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/name_template"
                        android:textColor="#444444"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <ImageButton

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:contentDescription="@string/app_name"
                        android:focusable="true"
                        android:paddingStart="10dp"
                        android:paddingTop="6dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        android:tag="normal"
                        android:tint="#ff5722"
                        app:srcCompat="@drawable/ic_star_rate"
                        tools:ignore="RtlCompat" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/doctor_speciality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:text="@string/speciality_template"
                    android:textColor="@color/special_font_color"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/rating_view"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:numStars="5" />


                </RelativeLayout>


                <Button
                    android:id="@+id/message_btn"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorPrimary"
                    android:onClick="messageDoctor"
                    android:text="@string/message"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ccc" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/info_arabic" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ccc" />









    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="start"
        android:maxLines="1"
        android:text="Select Your Time "
        android:textColor="#444444"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/rounded_edit_text">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_access_time_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            tools:ignore="VectorDrawableCompat" />


        <Spinner
            android:id="@+id/areaSpinner"
            android:layout_width="261dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:paddingStart="24dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentRight="true"
            android:paddingLeft="24dp"
            android:layout_marginRight="14dp" />


    </RelativeLayout>

    <Button
        android:id="@+id/btn_book"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:onClick="bookDoctor"
        android:text="@string/book"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>
<!--<include layout="@layout/state" />-->