<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/doctor_img"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:scaleType="fitXY"
            android:src="@drawable/testing" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/doctor_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="start"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:text="@string/name_template"
                    android:textColor="#444444"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/favorite_button_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:tag="normal"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_like_before"
                    tools:ignore="RtlCompat,VectorDrawableCompat" />
            </RelativeLayout>

            <TextView
                android:id="@+id/doctor_speciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="2dp"
                android:gravity="start"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/speciality_template"
                android:textColor="@color/special_font_color"
                android:textStyle="bold"
                android:layout_marginRight="40dp" />

            <TextView
                android:id="@+id/doctor_description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:gravity="start"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/about_template"
                android:layout_marginRight="40dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating_view"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:numStars="5"
                    android:progressTint="#ff5722" />


                <ImageButton
                    android:id="@+id/go_button_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"

                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24px"
                    tools:ignore="VectorDrawableCompat" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#c0c0c0" />

</LinearLayout>